Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74520

QDoubleSpinBox does not resize when setting prefix

XMLWordPrintable

    • 998740c61961c0dc3e1296f0349c23846327aea0

      QDoubleSpinBox does not resize when setting prefix. It does so when setting suffix. Looking at the source code, it seems that QDoubleSpinBox::setPrefix() function is missing the "updateGeometry();" function call.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            chehrlic Christian Ehrlicher
            pekarjal Pekka Karjalainen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes