tests/auto/widgets/widgets/qspinbox/tst_qspinbox.cpp
@@ -462,8 +462,11 @@ void tst_QSpinBox::setPrefixSuffix()
     QFETCH(bool, show);
 
     QSpinBox spin(0);
+    const QSize size1 = spin.sizeHint();
     spin.setPrefix(prefix);
+    const QSize size2 = spin.sizeHint();
     spin.setSuffix(suffix);
+    const QSize size3 = spin.sizeHint();
     spin.setValue(value);
     if (show)
         spin.show();
@@ -472,6 +475,15 @@ void tst_QSpinBox::setPrefixSuffix()
     QCOMPARE(spin.suffix(), suffix);
     QCOMPARE(spin.text(), expectedText);
     QCOMPARE(spin.cleanText(), expectedCleanText);
+
+    if (!prefix.isEmpty() && !suffix.isEmpty()) {
+        QVERIFY(size1.width() < size2.width());
+        QVERIFY(size2.width() < size3.width());
+        spin.setSuffix(QString());
+        QCOMPARE(spin.sizeHint(), size2);
+        spin.setPrefix(QString());
+        QCOMPARE(spin.sizeHint(), size1);
+    }
 }
 
 void tst_QSpinBox::valueChangedHelper(const QString &text)
